@@ -6,9 +6,12 @@ AUTOMAKE_OPTIONS = foreign
 
 java_sources = \
   AppendValues.java \
+  Children.java \
   Document.java \
   MakeAttribute.java \
   MakeElement.java \
+  NamedChildren.java \
+  StringValue.java \
   XMLFormat.java
 
 PACKAGE_FNAME = gnu-xquery-util
